Set better page size in Makefile. Update PDF

--- a/MathAnalysis/Sem4/Makefile
+++ b/MathAnalysis/Sem4/Makefile
@@ -9,4 +9,4 @@ clean:
 OUTDIR=.
 
 $(OUTDIR)/%.pdf: %.html
-	wkhtmltopdf --javascript-delay 5000 $< $@
+	wkhtmltopdf -O Landscape -s A5 --javascript-delay 5000 $< $@
