--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: xenial
 language: generic
 
 notifications:
@@ -6,7 +7,15 @@ notifications:
 
 before_install:
 - sudo apt-get update
-- sudo apt-get install wkhtmltopdf make
+- sudo apt-get install wkhtmltopdf make zip
 
 script:
-    - make -C MathAnalysis/Sem4
+    - make PREFIX="$PWD/output" -C MathAnalysis/Sem4 install
+    - zip -r release.zip output
+deploy:
+        provider: releases
+        api_key: $GITHUB_OAUTH_TOKEN
+        file: release.zip
+        skip_cleanup: true
+        #        on:
+        #  tags: true
