--- a/MathLogic/Colloq/Makefile
+++ b/MathLogic/Colloq/Makefile
@@ -1,16 +1,22 @@
+OUTDIR=.
+BUILDDIR=build
 
-all: Defs.html
+all: html
+
+.PHONY: html all clean
+
+html: Defs.html
 
 clean:
 	rm -rf *.html
-
-.PHONY: all clean
-
-OUTDIR=.
-BUILDDIR=build
 
 $(BUILDDIR)/%._html: %.md
 	markdown $< > $@
 
 $(OUTDIR)/%.html: $(BUILDDIR)/%._html
 	cat utility/__header.html $< utility/__footer.html > $@
+
+install: html
+	mkdir -p $(PREFIX)
+	cp $(OUTDIR)/*.html $(PREFIX)
+
