--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ script:
 deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
-        file: release.zip
+        file:
+            - output/Integrals.pdf
+            - output/Defs.html
         skip_cleanup: true
         #        on:
         #  tags: true
