--- a/MathLogic/Colloq/Makefile
+++ b/MathLogic/Colloq/Makefile
@@ -11,6 +11,7 @@ clean:
 	rm -rf *.html
 
 $(BUILDDIR)/%._html: %.md
+	mkdir -p $(BUILDDIR)
 	markdown $< > $@
 
 $(OUTDIR)/%.html: $(BUILDDIR)/%._html
